<resources>
    <string name="app_name">FbsReport</string>

    <string name="tab_setting">CÀI ĐẶT</string>
    <string name="tab_analysis">PHÂN TÍCH</string>

    <string name="action_back">Quay lại</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_done">Xong</string>
    <string name="action_login">Đăng nhập</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="action_confirm">OK</string>

    <string name="text_no_data">Không có dữ liệu :(</string>

    <string name="txt_title_username">Tên</string>
    <string name="txt_title_email_address">Địa chỉ email</string>
    <string name="txt_title_password">Mật khẩu</string>
    <string name="hint_username">Nhập tên người dùng</string>
    <string name="hint_email_address">email@example.com</string>
    <string name="hint_password">Nhập mật khẩu</string>

    <!-- Time Dialog -->
    <string name="filter_time_dialog_title">Chọn thời gian</string>
    <string name="filter_time_dialog_today">Hôm nay</string>
    <string name="filter_time_dialog_yesterday">Hôm qua</string>
    <string name="filter_time_dialog_week">Tuần này</string>
    <string name="filter_time_dialog_month">Tháng này</string>

    <!-- Main -->
    <string name="main_txt_try">Trải nghiệm FBS hoàn toàn miễn phí</string>
    <string name="main_txt_sign_up">Đăng ký</string>

    <!-- Sign up -->
    <string name="sign_up_btn">Đăng ký</string>

    <!-- Forgot Password -->
    <string name="forgot_password_title_phone_number">Số điện thoại</string>
    <string name="forgot_password_hint_phone_number">nhập số điện thoại</string>

    <!-- Login -->
    <string name="login_txt_forgot_password">Quên mật khẩu?</string>

    <!-- Branch -->
    <string name="branch_title">Danh sách chi nhánh</string>

    <!-- Home -->
    <string name="bottom_bar_setting">Cài đặt</string>
    <string name="bottom_bar_report">Báo cáo</string>
    <string name="bottom_bar_analytics">Phân tích</string>

    <!-- Report -->
    <string name="report_toolbar_title">Báo cáo</string>
    <string name="report_delete">Báo cáo hủy đơn</string>
    <string name="report_by_bill">Báo cáo theo đơn</string>
    <string name="report_discount">Báo cáo giảm giá</string>
    <string name="report_by_item">Báo cáo theo mặt hàng</string>
    <string name="report_revenue">Báo cáo doanh thu</string>

    <!-- Bill Report -->
    <string name="view_chart_report_total_money">Tổng tiền</string>
    <string name="view_chart_report_number_orders">%d đơn</string>

    <string name="bill_report_column_orders">Hóa đơn</string>
    <string name="bill_report_column_tables">Bàn</string>
    <string name="bill_report_column_sales">Doanh thu</string>

    <string name="bill_report_pager_toolbar_title">Báo cáo theo đơn</string>
    <string name="bill_report_detail_toolbar_title">Chi tiết đơn</string>
    <string name="bill_report_detail_order">Số hóa đơn</string>
    <string name="bill_report_detail_date">Ngày lập</string>
    <string name="bill_report_detail_table">Bàn</string>
    <string name="bill_report_detail_promotion">Giảm giá</string>
    <string name="bill_report_detail_tax">VAT</string>
    <string name="bill_report_detail_total">Thành tiền</string>

    <string name="custom_report_start_date">Ngày bắt đầu</string>
    <string name="custom_report_end_date">Ngày kết thúc</string>

    <string name="bill_section_view_report">Xem báo cáo</string>

    <!--Delete report-->
    <string name="delete_report_column_orders">Số hóa đơn</string>
    <string name="delete_report_column_total">Tổng tiền</string>
    <string name="delete_report_column_reason">Lý do</string>

    <!--Item report-->
    <string name="item_report_pager_toolbar_title">Báo cáo theo mặt hàng</string>

    <string name="item_report_item_title_dishes">Món ăn</string>
    <string name="item_report_item_title_discount">Giảm giá</string>
    <string name="item_report_item_title_total">Thành tiền</string>

    <string name="item_report_detail_toolbar_title">Chi tiết đơn hàng</string>
    <string name="item_report_detail_dishes">Các món ăn</string>
    <string name="item_report_detail_discount">Giảm giá</string>
    <string name="item_report_detail_total">Thành tiền</string>

    <string name="item_report_detail_item_code">Mã món ăn</string>
    <string name="item_report_detail_item_name">Tên</string>
    <string name="item_report_detail_item_category">Danh mục</string>
    <string name="item_report_detail_item_unit">Đơn vị</string>
    <string name="item_report_detail_item_quantity">Số lượng</string>
    <string name="item_report_detail_item_discount">Giảm giá</string>
    <string name="item_report_detail_item_price">Giá</string>
    <string name="item_report_detail_item_tax">VAT</string>
    <string name="item_report_detail_item_total">Tổng cộng</string>

    <!--Discount report-->
    <string name="discount_report_column_orders">Số Hóa đơn</string>
    <string name="discount_report_column_discount">Giảm giá</string>
    <string name="discount_report_column_reason">Lý do</string>

    <string name="discount_report_item_title_discount">Giảm giá</string>
    <string name="discount_report_item_title_total">Thành tiền</string>

    <!--Revenue report-->
    <string name="revenue_report_toolbar_title">Báo cáo theo doanh thu</string>
    <string name="revenue_report_column_date">Ngày</string>
    <string name="revenue_report_column_shift_1">Ca sáng</string>
    <string name="revenue_report_column_shift_2">Ca chiều</string>

    <string name="revenue_report_detail_toolbar_title">Chi tiết</string>
    
</resources>