<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.fr.fbsreport.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:atb_text_left="@string/action_cancel" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/txt_title_username"
                android:textColor="@color/lightGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/txt_title_email_address"
                android:textColor="@color/lightGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/txt_title_password"
                android:textColor="@color/lightGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginBottom="24dp"
                android:background="@color/orangeGradient"
                android:fontFamily="@font/sf_regular"
                android:gravity="center"
                android:text="@string/sign_up_btn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>