<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.report.ReportFragment"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.fr.fbsreport.widget.ItemViewReport
            android:id="@+id/item_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ivr_image_icon="@drawable/icon_reject"
            app:ivr_marginBorder="@dimen/spacing_normal"
            app:ivr_text_title="@string/report_delete" />

        <com.fr.fbsreport.widget.ItemViewReport
            android:id="@+id/item_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ivr_image_icon="@drawable/icon_list"
            app:ivr_marginBorder="@dimen/spacing_normal"
            app:ivr_text_title="@string/report_by_bill" />

        <com.fr.fbsreport.widget.ItemViewReport
            android:id="@+id/item_promotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ivr_image_icon="@drawable/icon_star"
            app:ivr_marginBorder="@dimen/spacing_normal"
            app:ivr_text_title="@string/report_discount" />

        <com.fr.fbsreport.widget.ItemViewReport
            android:id="@+id/item_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ivr_image_icon="@drawable/icon_flag"
            app:ivr_text_title="@string/report_by_item" />

    </LinearLayout>

</ScrollView>