<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.forgotpassword.ForgotPasswordActivity">

    <com.fr.fbsreport.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:atb_image_left="@drawable/icon_back"
        app:atb_text_left="@string/action_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="@font/sf_regular"
        android:text="@string/forgot_password_title_phone_number"
        android:textColor="@color/lightGray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:hint="@string/forgot_password_hint_phone_number"
        android:inputType="phone"
        android:textSize="15sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:background="@color/orangeGradient"
        android:fontFamily="@font/sf_regular"
        android:gravity="center"
        android:text="@string/action_done"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>