<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/ll_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_overview"
        android:paddingStart="@dimen/spacing_small"
        android:paddingTop="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:fontFamily="@font/sf_regular"
            android:text="@string/bill_report_column_orders"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sf_regular"
            android:gravity="center"
            android:text="@string/bill_report_column_tables"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:fontFamily="@font/sf_regular"
            android:gravity="end"
            android:text="@string/bill_report_column_sales"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_column"
        android:background="@color/appBgGray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/report_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_column" />

</RelativeLayout>