<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@color/orangeGradient"
        android:fontFamily="@font/sf_regular"
        android:gravity="center"
        android:text="@string/action_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/sf_regular"
        android:text="@string/main_txt_try"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_try"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/sf_regular"
        android:text="@string/main_txt_sign_up"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/footer"
        tools:ignore="ContentDescription" />

</RelativeLayout>