<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:elevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/ll_analytics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_analytics_normal"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_analytics" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_report"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:focusable="true">

            <ImageView
                android:id="@+id/img_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_report_normal"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_report" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:focusable="true">

            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_setting_normal"
                tools:ignore="ContentDescription" />\

            <TextView
                android:id="@+id/txt_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_setting" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
