<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgGray"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:maxLines="1"
                    android:text="@string/bill_report_detail_order"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_sale_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/mediumBlack"
                    android:textSize="15sp"
                    tools:text="ABC123456" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:maxLines="1"
                    android:text="@string/bill_report_detail_date"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_sale_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/mediumBlack"
                    android:textSize="15sp"
                    tools:text="20/06/2016" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:maxLines="1"
                    android:text="@string/bill_report_detail_table"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_table"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/mediumBlack"
                    android:textSize="15sp"
                    tools:text="14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:maxLines="1"
                    android:text="@string/bill_report_detail_tax"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/mediumBlack"
                    android:textSize="15sp"
                    tools:text="10.000d" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:maxLines="1"
                    android:text="@string/bill_report_detail_promotion"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/mediumBlack"
                    android:textSize="15sp"
                    tools:text="200.000d" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:maxLines="1"
                    android:text="@string/bill_report_detail_total"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/mediumBlack"
                    android:textSize="15sp"
                    tools:text="10.000.000d" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>