<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgGray"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/ll_filter"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_normal"
            android:fontFamily="@font/sf_regular"
            android:gravity="center_vertical"
            android:text="Thời gian"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:background="@android:color/white"
            android:fontFamily="@font/sf_regular"
            android:gravity="center"
            android:text="Hôm nay"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_filter"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_tiny"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_tiny">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sf_regular"
            android:text="@string/revenue_report_column_date"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sf_regular"
            android:gravity="center"
            android:text="@string/revenue_report_column_shift_1"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:fontFamily="@font/sf_regular"
            android:gravity="center"
            android:text="@string/revenue_report_column_shift_2"
            android:textColor="@color/mediumBlack"
            android:textSize="15sp" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_column">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/report_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>